--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -111,7 +111,7 @@ fade-out-step = 0.03;
 # fade-exclude = []
 
 # Do not fade on window open/close.
-# no-fading-openclose = false
+no-fading-openclose = true
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -216,7 +216,7 @@ blur-background-exclude = [
 # `xrender` is the default one.
 #
 #backend = 'glx'
-backend = "xr_glx_hybrid";
+backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
