--- a/.config/i3/config
+++ b/.config/i3/config
@@ -239,7 +239,8 @@ bindsym $mod+r mode "resize"
 
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 #exec --no-startup-id /usr/lib/policykit-1-gnome/polkit-gnome-authentication-agent-1
-exec --no-startup-id nitrogen --restore
+# exec --no-startup-id nitrogen --restore
+exec_always --no-startup-id autorandr --change && feh --bg-scale --no-fehbg ~/Pictures/Wallpapers/OSqi7Fg.png 
 #exec --no-startup-id xfce4-power-manager
 exec --no-startup-id dunst
 exec --no-startup-id picom -b --config ~/.config/picom/picom.conf
