--- a/.config/i3/config
+++ b/.config/i3/config
@@ -240,12 +240,12 @@ bindsym $mod+r mode "resize"
 exec_always --no-startup-id $HOME/.config/polybar/launch.sh
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 # exec --no-startup-id nitrogen --restore
-exec_always --no-startup-id autorandr --change && feh --bg-scale --no-fehbg ~/Pictures/Wallpapers/OSqi7Fg.png 
-#exec --no-startup-id xfce4-power-manager
+exec_always --no-startup-id autorandr --change && feh --bg-scale --no-fehbg ~/Pictures/Wallpapers/linux-1626872938405-7677.jpg  
+exec --no-startup-id xfce4-power-manager
 exec --no-startup-id dunst
 exec --no-startup-id picom -b --config ~/.config/picom/picom.conf
 exec_always --no-startup-id "setxkbmap -layout gb"
-exec --no-startup-id mate-power-manager 
+#exec --no-startup-id mate-power-manager 
 #exec --no-startup-id xautolock -time 10 -locker $locker -corners +00- 
 
 #############################
