--- a/.config/gtk-3.0/settings.ini
+++ b/.config/gtk-3.0/settings.ini
@@ -1,6 +1,6 @@
 [Settings]
-gtk-theme-name=Greybird
-gtk-icon-theme-name=elementary
+gtk-theme-name=Qogir
+gtk-icon-theme-name=Qogir-dark
 gtk-font-name=Montserrat Semi-Bold 9
 gtk-cursor-theme-name=Adwaita
 gtk-cursor-theme-size=0
