--- a/.config/i3/config
+++ b/.config/i3/config
@@ -188,6 +188,8 @@ bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcu
 # switch to workspace with urgent window automatically
 for_window [urgent=latest] focus
 
+# floating windows
+for_window [class="Xfce4-power-manager-settings"] floating enable
 
 set $mode_system System (l) lock, (e) logout, (s) suspend, (h) hibernate, (r) reboot, (Shift+s) shutdown
 mode "$mode_system" {
