--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -38,13 +38,13 @@ border-bottom-color = ${color.bground}
 ## Miscellaneous ##
 
 fixed-center = true
-padding-left = 2 
-padding-right = 2
+padding-left = 0 
+padding-right = 0
 module-margin = 1.5
 
-modules-left = i3
-modules-center = title
-modules-right = i3-mode date time
+modules-left = i3 
+modules-center = title 
+modules-right = i3-mode date 
 
 tray-position = none
 tray-detached = true
@@ -88,15 +88,15 @@ border-color = ${color.bground}
 border-top-color = ${color.fground}
 
 fixed-center = true
-padding-left = 2 
-padding-right = 2
-module-margin = 1.5
+padding-left = 0 
+padding-right = 0
+module-margin = 0
 
-modules-left = pulseaudio-control backlight battery-combined memory cpu
-modules-center = spotify
-modules-right = network vpnstatus wlan networketh 
+modules-left = battery backlight pulseaudio-control 
+modules-center = spotify 
+modules-right = network vpnstatus wlan networketh  
 
-tray-position = right
+tray-position = none
 tray-detached = false
 
 
@@ -109,7 +109,7 @@ tray-detached = false
 type = internal/xwindow
 
 format = <label>
-format-background = ${color.orange}
+format-background = ${color.purple}
 format-foreground = ${color.black}
 format-padding = 2
 
@@ -157,27 +157,17 @@ format = <label-mode>
 
 label-mode = %mode%
 label-mode-padding = 2
-label-mode-background = #e60053
-
-### time ###
-[module/time]
-type = internal/date
-
-interval = 1.0
-
-date =  %H:%M
-format-background = ${color.purple}
-format-foreground = ${color.black}
-format-padding = 1
+label-mode-background = ${color.red}
+label-mode-foreground = ${color.white}
 
 ### date ###
 [module/date]
 type = internal/date
-date =  %e %B - %A
+date =  %e %B - %A |  %H:%M 
 label = %date%
-format-background = ${color.pink}
+format-background = ${color.cyan}
 format-foreground = ${color.black}
-format-padding = 1
+format-padding = 2
 
 
 ### backlight ###
@@ -189,9 +179,9 @@ type = internal/backlight
 card = intel_backlight
 
 format = <ramp> <label>
-format-background = ${color.orange}
+format-background = ${color.purple}
 format-foreground = ${color.black}
-format-padding = 1
+format-padding = 2
 
 label = %percentage%%
 
@@ -205,7 +195,7 @@ type = internal/cpu
 label =  %percentage%%
 format-background = ${color.pink}
 format-foreground = ${color.black}
-format-padding = 1
+format-padding = 2
 
 ### memory ###
 [module/memory]
@@ -213,9 +203,9 @@ type = internal/memory
 label =  %gb_used%
 format-background = ${color.yellow}
 format-foreground = ${color.black}
-format-padding = 1
+format-padding = 2
 
-### battery ###
+### battery combined ###
 [module/battery-combined]
 type = custom/script
 exec = ~/.config/polybar/scripts/battery-combined-shell.sh
@@ -224,20 +214,62 @@ label-background = ${color.green}
 label-foreground = ${color.black}
 label-padding = 1
 
+### battery ###
+[module/battery]
+type = internal/battery
+
+battery = BAT0
+
+poll-interval = 1
+
+full-at = 95
+empty-at = 5
+
+label-empty = %percentage%
+label-discharging = %percentage%%
+label-charging = %percentage%%
+label-full = %percentage%%
+
+format-empty = <ramp-capacity> <label-empty>
+format-empty-background = ${color.red}
+format-empty-foreground = ${color.black}
+format-empty-padding = 1
+format-discharging = <ramp-capacity> <label-discharging>
+format-discharging-background = ${color.orange}
+format-discharging-foreground = ${color.black}
+format-discharging-padding = 1
+format-full = <ramp-capacity> <label-full>
+format-full-background = ${color.green}
+format-full-foreground = ${color.black}
+format-full-padding = 1
+format-charging =  <label-charging>
+format-charging-background = ${color.yellow}
+format-charging-foreground = ${color.black}
+format-charging-padding = 2
+
+# ramp-capacity-padding = 1
+ramp-capacity-0 = 
+# ramp-capcity-1-background = ${color.orange}
+ramp-capacity-2 = 
+# ramp-capacity-2-background = ${color.yellow}
+ramp-capacity-3 = 
+# ramp-capacity-3-background = ${color.cyan}
+ramp-capacity-4 = 
+# ramp-capacity-4-background = ${color.green}
 
 ### sound ###
 [module/pulseaudio-control]
 type = custom/script
 tail = true
 format-background = ${color.cyan}
-label-padding = 2
+label-padding = 1
 label-foreground = ${color.black}
 
 # Icons mixed from Font Awesome 5 and Material Icons
 # You can copy-paste your options for each possible action, which is more
 # trouble-free but repetitive, or apply only the relevant ones (for example
 # --sink-blacklist is only needed for next-sink).
-exec = pulseaudio-control --icons-volume " , " --icon-muted " " --sink-nicknames-from "device.description" listen
+exec = ~/.local/bin/pulseaudio-control --icons-volume " , " --icon-muted " " --sink-nickname "alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp__sink:Speakers" --sink-nicknames-from "device.description" listen
 click-right = exec pavucontrol &
 click-left = pulseaudio-control togmute
 # click-middle = pulseaudio-control --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-sink
@@ -250,10 +282,10 @@ type = custom/script
 interval = 1
 format-prefix = " "
 format = <label>
-format-background = ${color.purple}
+format-background = ${color.green}
 format-foreground = ${color.black}
-format-padding = 1
-exec = python /usr/bin/polybar-spotify -f '{artist}: {song}'
+format-padding = 2
+exec = python ~/.local/bin/polybar-spotify -f '{artist}: {song}'
 # ;control players (optional)
 click-left = playerctl --player=spotify play-pause 
 click-right = playerctl --player=spotify next 
@@ -273,25 +305,26 @@ interval = 5
 label-connected =  %essid%
 format-connected-background = ${color.green}
 format-connected-foreground = ${color.black}
-format-connected-padding = 1
+format-connected-padding = 2
 label-disconnected =  Not Connected
 format-disconnected-background = ${color.red}
 format-disconnected-foreground = ${color.modulefg}
-format-disconnected-padding = 1
+format-disconnected-padding = 2
 
 ### wlan ###
 [module/network]
 type = internal/network
 interface = wlp0s20f3
 # interface = wlp3s0
-label-connected =  %downspeed% |  %upspeed% | %local_ip%
+label-connected =  |  %downspeed% |  %upspeed% | %local_ip% 
 format-connected-foreground = ${color.modulefg}
+format-connected-padding = 1
 
 ## ethernet ##
 [module/networketh]
 type = internal/network
 interface = enp0s25
-label-connected =  |  %downspeed% |  %upspeed% | %local_ip%
+label-connected =  |  %downspeed% |  %upspeed% | %local_ip% 
 format-connected-foreground = ${color.black}
 format-connected-background = ${color.yellow}
 format-connected-padding = 1
@@ -302,6 +335,7 @@ type = custom/script
 exec = ~/.config/polybar/scripts/vpn.sh
 tail = true
 format-foreground = ${color.green}
+format-padding = 2
 label = %output%
 
 
