--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -46,8 +46,14 @@ modules-left = i3
 modules-center = title 
 modules-right = i3-mode date 
 
-tray-position = none
-tray-detached = true
+# tray-position = right
+# tray-detached = false
+# tray-maxsize = 16
+# tray-background = ${color.bground}
+# tray-offset-x = 0
+# tray-offset-y = 0
+# tray-padding = 4
+# tray-scale = 1.0
 
 ###########
 # Bar Io ##
@@ -62,7 +68,7 @@ height = 20
 offset-y = 0
 offset-x =0
 
-border-top-size = 1
+border-top-size = 0
 border-bottom-size = 0
 border-right-size = 0
 border-left-size = 0
@@ -92,13 +98,18 @@ padding-left = 0
 padding-right = 0
 module-margin = 0
 
-modules-left = battery backlight pulseaudio-control 
-modules-center = spotify 
-modules-right = network vpnstatus wlan networketh  
+modules-left = battery backlight pulseaudio-control wlan vpnstatus network networketh   
+modules-center = 
+modules-right = spotify 
 
-tray-position = none
+tray-position = right
 tray-detached = false
-
+tray-maxsize = 16
+tray-background = ${color.bground}
+tray-offset-x = 0
+tray-offset-y = 0
+tray-padding = 4
+tray-scale = 1.0
 
 #############
 ## Modules ##
@@ -109,12 +120,12 @@ tray-detached = false
 type = internal/xwindow
 
 format = <label>
-format-background = ${color.purple}
-format-foreground = ${color.black}
+# format-background = ${color.purple}
+format-foreground = ${color.white}
 format-padding = 2
 
 label = %title%
-label-maxlen = 30
+label-maxlen = 80
 
 #label-empty = Arch Linux
 #label-empty-foreground = ${color.}
@@ -225,16 +236,19 @@ poll-interval = 1
 full-at = 95
 empty-at = 5
 
-label-empty = %percentage%
-label-discharging = %percentage%%
-label-charging = %percentage%%
-label-full = %percentage%%
+label-empty = %percentage%% DANGER WILL ROBINSON!
+label-discharging = %percentage%% %time%
+label-charging = %percentage%% %time%
+label-full = %percentage%% FULL
+label-low = %percentage%% %time%
+
+time-format = %H:%M
 
 format-empty = <ramp-capacity> <label-empty>
 format-empty-background = ${color.red}
 format-empty-foreground = ${color.black}
 format-empty-padding = 1
-format-discharging = <ramp-capacity> <label-discharging>
+format-discharging = <animation-discharging> <label-discharging>
 format-discharging-background = ${color.orange}
 format-discharging-foreground = ${color.black}
 format-discharging-padding = 1
@@ -242,20 +256,36 @@ format-full = <ramp-capacity> <label-full>
 format-full-background = ${color.green}
 format-full-foreground = ${color.black}
 format-full-padding = 1
-format-charging =  <label-charging>
+format-charging = <animation-charging> <label-charging>
 format-charging-background = ${color.yellow}
 format-charging-foreground = ${color.black}
 format-charging-padding = 2
 
-# ramp-capacity-padding = 1
 ramp-capacity-0 = 
-# ramp-capcity-1-background = ${color.orange}
+ramp-capacity-1 = 
 ramp-capacity-2 = 
-# ramp-capacity-2-background = ${color.yellow}
 ramp-capacity-3 = 
-# ramp-capacity-3-background = ${color.cyan}
 ramp-capacity-4 = 
-# ramp-capacity-4-background = ${color.green}
+
+bar-capacity-width = 10
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-framerate = 500
+
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
 
 ### sound ###
 [module/pulseaudio-control]
@@ -280,10 +310,11 @@ scroll-down = pulseaudio-control --volume-max 130 down
 [module/spotify]
 type = custom/script
 interval = 1
-format-prefix = " "
+format-prefix = ":: "
+format-suffix = " ::"
 format = <label>
-format-background = ${color.green}
-format-foreground = ${color.black}
+# format-background = ${color.green}
+format-foreground = ${color.green}
 format-padding = 2
 exec = python ~/.local/bin/polybar-spotify -f '{artist}: {song}'
 # ;control players (optional)
@@ -316,7 +347,7 @@ format-disconnected-padding = 2
 type = internal/network
 interface = wlp0s20f3
 # interface = wlp3s0
-label-connected =  |  %downspeed% |  %upspeed% | %local_ip% 
+label-connected =  | %local_ip% |  %downspeed% |  %upspeed% 
 format-connected-foreground = ${color.modulefg}
 format-connected-padding = 1
 
