--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -26,8 +26,8 @@ override-redirect = false
 
 ## Fonts ##
 
-font-0 = Montserrat:style=Semibold:size=9;3
-font-1 = "FontAwesome:pixelsize=8;3"
+font-0 = Montserrat:style=Semibold:size=10;3
+font-1 = "FontAwesome:pixelsize=9;3"
 
 ## Colours ##
 
@@ -44,7 +44,7 @@ module-margin = 1.5
 
 modules-left = i3 
 modules-center = title 
-modules-right = i3-mode date 
+modules-right = i3-mode vpnstatus wlan date 
 
 # tray-position = right
 # tray-detached = false
@@ -82,8 +82,8 @@ override-redirect = false
 
 ## Fonts ##
 
-font-0 = Montserrat:style=Semibold:size=9;3
-font-1 = "FontAwesome:pixelsize=8;3"
+font-0 = Montserrat:style=Semibold:size=10;3
+font-1 = "FontAwesome:pixelsize=9;3"
 
 ## Colours ##
 
@@ -96,11 +96,10 @@ border-top-color = ${color.fground}
 fixed-center = true
 padding-left = 0 
 padding-right = 0
-module-margin = 0
-
-modules-left = battery backlight pulseaudio-control wlan vpnstatus network networketh   
-modules-center = 
-modules-right = spotify 
+module-margin = 1
+modules-left = battery-0 battery-1 network-wifi network-eth
+modules-center = spotify 
+modules-right = pulseaudio-control 
 
 tray-position = right
 tray-detached = false
@@ -187,7 +186,8 @@ type = internal/backlight
 
 # Use the following command to list available cards:
 # $ ls -1 /sys/class/backlight/
-card = intel_backlight
+# card = intel_backlight
+card = amdgpu_bl1
 
 format = <ramp> <label>
 format-background = ${color.purple}
@@ -226,7 +226,7 @@ label-foreground = ${color.black}
 label-padding = 1
 
 ### battery ###
-[module/battery]
+[module/battery-0]
 type = internal/battery
 
 battery = BAT0
@@ -238,7 +238,68 @@ empty-at = 5
 
 label-empty = %percentage%% DANGER WILL ROBINSON!
 label-discharging = %percentage%% %time%
-label-charging = %percentage%% %time%
+label-charging = %percentage%% %time% 
+label-full = %percentage%% FULL
+label-low = %percentage%% %time%
+
+time-format = %H:%M
+
+format-empty = <ramp-capacity> <label-empty>
+format-empty-background = ${color.red}
+format-empty-foreground = ${color.black}
+format-empty-padding = 1
+format-discharging = <animation-discharging> <label-discharging>
+format-discharging-background = ${color.orange}
+format-discharging-foreground = ${color.black}
+format-discharging-padding = 1
+format-full = <ramp-capacity> <label-full>
+format-full-background = ${color.green}
+format-full-foreground = ${color.black}
+format-full-padding = 1
+format-charging = <animation-charging> <label-charging>
+format-charging-background = ${color.yellow}
+format-charging-foreground = ${color.black}
+format-charging-padding = 2
+
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
+
+bar-capacity-width = 10
+
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
+animation-charging-framerate = 750
+
+animation-discharging-0 = 
+animation-discharging-1 = 
+animation-discharging-2 = 
+animation-discharging-3 = 
+animation-discharging-4 = 
+animation-discharging-framerate = 500
+
+animation-low-0 = !
+animation-low-1 = 
+animation-low-framerate = 200
+
+[module/battery-1]
+type = internal/battery
+
+battery = BAT1
+
+poll-interval = 1
+
+full-at = 95
+empty-at = 5
+
+label-empty = %percentage%% DANGER WILL ROBINSON!
+label-discharging = %percentage%% %time%
+label-charging = %percentage%% %time% 
 label-full = %percentage%% FULL
 label-low = %percentage%% %time%
 
@@ -299,12 +360,16 @@ label-foreground = ${color.black}
 # You can copy-paste your options for each possible action, which is more
 # trouble-free but repetitive, or apply only the relevant ones (for example
 # --sink-blacklist is only needed for next-sink).
-exec = ~/.local/bin/pulseaudio-control --icons-volume " , " --icon-muted " " --sink-nickname "alsa_output.pci-0000_00_1f.3-platform-skl_hda_dsp_generic.HiFi__hw_sofhdadsp__sink:Speakers" --sink-nicknames-from "device.description" listen
+exec = pulseaudio-control --icons-volume " , " --icon-muted " " --node-nickname "alsa_output.pci-0000_05_00.6.analog-stereo:Speakers" --node-nicknames-from "device.description" listen
 click-right = exec pavucontrol &
 click-left = pulseaudio-control togmute
 # click-middle = pulseaudio-control --sink-blacklist "alsa_output.pci-0000_01_00.1.hdmi-stereo-extra2" next-sink
 scroll-up = pulseaudio-control --volume-max 130 up
 scroll-down = pulseaudio-control --volume-max 130 down
+
+[module/pulseaudio]
+type = internal/pulseaudio
+interval = 5
 
 ### spotify ###
 [module/spotify]
@@ -315,7 +380,7 @@ format-suffix = " ::"
 format = <label>
 # format-background = ${color.green}
 format-foreground = ${color.green}
-format-padding = 2
+format-padding = 3
 exec = python ~/.local/bin/polybar-spotify -f '{artist}: {song}'
 # ;control players (optional)
 click-left = playerctl --player=spotify play-pause 
@@ -328,13 +393,13 @@ click-middle = playerctl --player=spotify previous
 [module/wlan]
 type = internal/network
 
-interface = wlp0s20f3
-# interface = wlp3s0
+# interface = wlp0s20f3
+interface = wlp3s0
 
 interval = 5
 
 label-connected =  %essid%
-format-connected-background = ${color.green}
+format-connected-background = ${color.purple}
 format-connected-foreground = ${color.black}
 format-connected-padding = 2
 label-disconnected =  Not Connected
@@ -343,18 +408,19 @@ format-disconnected-foreground = ${color.modulefg}
 format-disconnected-padding = 2
 
 ### wlan ###
-[module/network]
+[module/network-wifi]
 type = internal/network
-interface = wlp0s20f3
-# interface = wlp3s0
+# interface = wlp0s20f3
+interface = wlp3s0
 label-connected =  | %local_ip% |  %downspeed% |  %upspeed% 
-format-connected-foreground = ${color.modulefg}
+format-connected-foreground = ${color.black}
+format-connected-background = ${color.purple}
 format-connected-padding = 1
 
 ## ethernet ##
-[module/networketh]
+[module/network-eth]
 type = internal/network
-interface = enp0s25
+interface = enp4s0f0
 label-connected =  |  %downspeed% |  %upspeed% | %local_ip% 
 format-connected-foreground = ${color.black}
 format-connected-background = ${color.yellow}
@@ -364,8 +430,10 @@ format-connected-padding = 1
 [module/vpnstatus]
 type = custom/script
 exec = ~/.config/polybar/scripts/vpn.sh
-tail = true
-format-foreground = ${color.green}
+#tail = true
+interval = 30
+format-background = ${color.red}
+format-foreground = ${color.white}
 format-padding = 2
 label = %output%
 
