--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -389,6 +389,13 @@ click-middle = playerctl --player=spotify previous
 
 ## networking ##
 
+### bluetooth ####
+[module/bluetooth]
+type = custom/script
+exec = rofi-bluetooth --status
+interval = 1
+click-left = rofi-bluetooth &
+
 ### wifi ###
 [module/wlan]
 type = internal/network
