--- a/.config/polybar/config.ini
+++ b/.config/polybar/config.ini
@@ -97,9 +97,9 @@ fixed-center = true
 padding-left = 0 
 padding-right = 0
 module-margin = 1
-modules-left = battery-0 battery-1 network-wifi network-eth
-modules-center = spotify 
-modules-right = pulseaudio-control 
+modules-left = battery-0 battery-1 bluetooth pulseaudio-control network-wifi network-eth
+modules-center = 
+modules-right = spotify
 
 tray-position = right
 tray-detached = false
@@ -390,18 +390,27 @@ click-middle = playerctl --player=spotify previous
 ## networking ##
 
 ### bluetooth ####
+; [module/bluetooth]
+; type = custom/script
+; exec = rofi-bluetooth --status
+; interval = 1
+; click-left = rofi-bluetooth &
+
 [module/bluetooth]
 type = custom/script
-exec = rofi-bluetooth --status
-interval = 1
-click-left = rofi-bluetooth &
+exec = ~/.config/polybar/scripts/bluetooth.sh
+interval = 2
+; click-left = rofi-bluetooh & 
+; click-right = ~/.config/polybar/toggle_bluetooth.sh
+format-padding = 2
+format-background = ${color.green}
 
 ### wifi ###
 [module/wlan]
 type = internal/network
 
 # interface = wlp0s20f3
-interface = wlp3s0
+interface = wlp1s0
 
 interval = 5
 
@@ -418,7 +427,7 @@ format-disconnected-padding = 2
 [module/network-wifi]
 type = internal/network
 # interface = wlp0s20f3
-interface = wlp3s0
+interface = wlp1s0
 label-connected =  | %local_ip% |  %downspeed% |  %upspeed% 
 format-connected-foreground = ${color.black}
 format-connected-background = ${color.purple}
@@ -427,7 +436,7 @@ format-connected-padding = 1
 ## ethernet ##
 [module/network-eth]
 type = internal/network
-interface = enp4s0f0
+interface = enp3s0f0
 label-connected =  |  %downspeed% |  %upspeed% | %local_ip% 
 format-connected-foreground = ${color.black}
 format-connected-background = ${color.yellow}
