fix brave transparency

--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -147,7 +147,8 @@ inactive-opacity-override = false;
 # focus-exclude = []
 focus-exclude = [ 
   "class_g = 'Cairo-clock'",
-  "class_g = 'Vivaldi-stable'"
+  "class_g = 'Vivaldi-stable'",
+  "class_g = 'Brave-browser'"
 ];
 
 # Use fixed inactive dim value, instead of adjusting according to window opacity.
