--- a/.config/picom/picom.conf
+++ b/.config/picom/picom.conf
@@ -94,7 +94,7 @@ utility       = { shadow = false; };
 # Fade windows in/out when opening/closing and when opacity changes,
 #  unless no-fading-openclose is used.
 # fading = false
-fading = true
+fading = true;
 
 # Opacity change between steps while fading in. (0.01 - 1.0, defaults to 0.028)
 # fade-in-step = 0.028
@@ -111,7 +111,7 @@ fade-out-step = 0.03;
 # fade-exclude = []
 
 # Do not fade on window open/close.
-no-fading-openclose = true
+no-fading-openclose = true;
 
 # Do not fade destroyed ARGB windows with WM frame. Workaround of bugs in Openbox, Fluxbox, etc.
 # no-fading-destroyed-argb = false
@@ -225,7 +225,7 @@ backend = "glx";
 
 # Enable/disable VSync.
 # vsync = false
-vsync = true
+vsync = true;
 
 # Enable remote control via D-Bus. See the *D-BUS API* section below for more details.
 # dbus = false
@@ -256,7 +256,7 @@ detect-client-opacity = true;
 # try detecting this with X RandR extension.
 #
 # refresh-rate = 60
-refresh-rate = 0
+#refresh-rate = 0
 
 # Limit picom to repaint at most once every 1 / 'refresh_rate' second to 
 # boost performance. This should not be used with 
@@ -276,7 +276,7 @@ refresh-rate = 0
 # to maximize performance for full-screen windows. Known to cause flickering 
 # when redirecting/unredirecting windows.
 #
-unredir-if-possible = true
+unredir-if-possible = true;
 
 # Delay before unredirecting the window, in milliseconds. Defaults to 0.
 # unredir-if-possible-delay = 0
@@ -288,14 +288,14 @@ unredir-if-possible = true
 # in the same group focused at the same time.
 #
 # detect-transient = false
-detect-transient = true
+detect-transient = true;
 
 # Use 'WM_CLIENT_LEADER' to group windows, and consider windows in the same 
 # group focused at the same time. 'WM_TRANSIENT_FOR' has higher priority if 
 # detect-transient is enabled, too.
 #
 # detect-client-leader = false
-detect-client-leader = true
+detect-client-leader = true;
 
 # Resize damaged region by a specific number of pixels. 
 # A positive value enlarges it while a negative one shrinks it. 
@@ -335,7 +335,7 @@ detect-client-leader = true
 # The opposing option is use-damage
 #
 # no-use-damage = false
-use-damage = true
+use-damage = true;
 
 # Use X Sync fence to sync clients' draw calls, to make sure all draw 
 # calls are finished before picom starts drawing. Needed on nvidia-drivers 
